Delete all js and css files
Signed-off-by: Kostiantyn <galancevkonstantin21@gmail.com>

--- a/src/CustomerOrder/CustomerBundle/Resources/views/Default/index.html.twig
+++ b/src/CustomerOrder/CustomerBundle/Resources/views/Default/index.html.twig
@@ -26,6 +26,6 @@
     </div>
 </div>
 
-<script type="text/javascript" data-main="main" src="./bower_components/requirejs/require.js"></script>
+{{ require_js_initialize({ 'main' : 'demo/main' }) }}
 </body>
 </html>
